--- a/nextflow.config
+++ b/nextflow.config
@@ -208,7 +208,7 @@ params {
     config_profile_name        = null
     config_profile_description = null
     custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    custom_config_base         = "${projectDir}/../../configs/"
     config_profile_contact     = null
     config_profile_url         = null
 
@@ -231,19 +231,9 @@ params {
 includeConfig 'conf/base.config'
 
 // Load nf-core custom profiles from different Institutions
-try {
-    includeConfig "${params.custom_config_base}/nfcore_custom.config"
-} catch (Exception e) {
-    System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
-}
+includeConfig "${projectDir}/../../configs/pipeline/differentialabundance.config"
+singularity.cacheDir = "${projectDir}/../../images/"
 
-// Load nf-core/differentialabundance custom profiles from different institutions.
-// Warning: Uncomment only if a pipeline-specific institutional config already exists on nf-core/configs!
-// try {
-//   includeConfig "${params.custom_config_base}/pipeline/differentialabundance.config"
-// } catch (Exception e) {
-//   System.err.println("WARNING: Could not load nf-core/config/differentialabundance profiles: ${params.custom_config_base}/pipeline/differentialabundance.config")
-// }
 profiles {
     debug {
         dumpHashes             = true
@@ -356,7 +346,6 @@ profiles {
 apptainer.registry   = 'quay.io'
 docker.registry      = 'quay.io'
 podman.registry      = 'quay.io'
-singularity.registry = 'quay.io'
 
 // Nextflow plugins
 plugins {
