Addition: gprofiler2 gene sets for webtool queries. Background (for all contrasts) and significant (for each contrast) gene sets are stored within files in output directory (tables/gene_sets/).

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -287,6 +287,11 @@ process {
                 path: { "${params.outdir}/tables/differential" },
                 mode: params.publish_dir_mode,
                 pattern: '*_filtered.tsv'
+            ],
+            [
+                path: { "${params.outdir}/tables/gene_sets" },
+                mode: params.publish_dir_mode,
+                pattern: '*_gene_set.txt'
             ]
         ]
     }
