Added heatmap of GSEA pathways.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -297,12 +297,12 @@ process {
     }
 
     withName: GSEA_GSEA {
-        ext.prefix = { "${meta.id}.${gene_sets.baseName}." }
+        ext.prefix = { "${meta.id}.${meta.variable}.${gene_sets.baseName}." }
         publishDir = [
             [
                 path: { "${params.outdir}/report/gsea/${meta.id}/${gene_sets.baseName}" },
                 mode: params.publish_dir_mode,
-                pattern: '*.{html,zip,png,tsv,rpt}'
+                pattern: '*.{png,*_report_*.tsv}'
             ]
         ]
         ext.args = { [
@@ -324,6 +324,28 @@ process {
             "-save_rnd_lists $params.gsea_save_rnd_lists",
             "-zip_report $params.gsea_zip_report"
         ].join(' ').trim() }
+    }
+
+    withName: DESEQ2_HEATMAP {
+        ext.prefix = { "DESeq2." }
+        publishDir = [
+            [
+                path: { "${params.outdir}/plots/heatmap/" },
+                mode: params.publish_dir_mode,
+                pattern: '*heatmap.png'
+            ]
+        ]
+    }
+
+    withName: GSEA_HEATMAP {
+        ext.prefix = { "GSEA." }
+        publishDir = [
+            [
+                path: { "${params.outdir}/plots/heatmap/" },
+                mode: params.publish_dir_mode,
+                pattern: '*heatmap.png'
+            ]
+        ]
     }
 
     withName: GPROFILER2_GOST {
