CONF: Included GRCm39 genome and corrected GSEA and DESEQ2 HEATMAPS PublishDir formats.

--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -436,5 +436,18 @@ params {
             readme      = "${params.igenomes_base}/Sus_scrofa/UCSC/susScr3/Annotation/README.txt"
             mito_name   = "chrM"
         }
+        'GRCm39' {
+            fasta       = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm39/Sequence/WholeGenomeFasta/genome.fa"
+            bwa         = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm39/Sequence/BWAIndex/version0.6.0/"
+            bowtie2     = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm39/Sequence/Bowtie2Index/"
+            star        = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm39/Sequence/STARIndex/"
+            bismark     = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm39/Sequence/BismarkIndex/"
+            gtf         = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm39/Annotation/Genes/genes.gtf"
+            bed12       = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm39/Annotation/Genes/genes.bed"
+            readme      = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm39/Annotation/README.txt"
+            mito_name   = "MT"
+            macs_gsize  = "1.87e9"
+            blacklist   = "${projectDir}/assets/blacklists/GRCm39-blacklist.bed"
+        }
     }
 }
