--- a/conf/modules.config
+++ b/conf/modules.config
@@ -332,7 +332,7 @@ process {
             [
                 path: { "${params.outdir}/plots/heatmap/" },
                 mode: params.publish_dir_mode,
-                pattern: '*heatmap.png'
+                pattern: '*{heatmap.png,.xlsx}'
             ]
         ]
     }
